--- a/package.json
+++ b/package.json
@@ -9,6 +9,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack-bundle-tracker": "^1.0.0"
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "eslint-loader": "^4.0.2",
+    "style-loader": "^2.0.0",
+    "vue-cli": "^2.9.6",
+    "vue-loader": "^15.9.7",
+    "webpack": "^5.38.1",
+    "webpack-bundle-tracker": "^1.0.0",
+    "webpack-cli": "^4.7.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "axios": "^0.21.1",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12"
   }
 }
