--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 services:
   postgres:
     image: postgis/postgis:13-master
+    container_name: kols-postgres
     ports:
      - "5432:5432"
     environment:
@@ -13,3 +14,25 @@ services:
       - POSTGRES_USER=usummit_user
       - POSTGRES_PASSWORD=manager
     command: postgres -c 'statement_timeout=20000'
+
+  rabbitmq:
+    image: rabbitmq
+    ports:
+      - "5672:5672"
+
+  redis:
+    image: redis
+    container_name: kols-redis
+    ports:
+      - "6379:6379"
+
+  celery-worker:
+    build: .
+    container_name: celery
+    volumes:
+      - ./:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings.base
+    command: celery worker -A config
+    depends_on:
+      - redis
